# MenGrowth

./: .gitignore  =1.8.6  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: preprocessing-researcher.md
.claude/hooks/: compact-context.sh
.claude/rules/: coding-standards.md  preprocessing.md  testing.md
.claude/skills/dl-scientist/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/preprocess-debug/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/test/: SKILL.md
configs/: longitudinal_registration_matches.yaml  preprocessing.yaml  preprocessing_cfg1.yaml  preprocessing_qc_example.yaml  preprocessing_tester.yaml  quality_analysis.yaml  raw_data.yaml
configs/icaiserver/: preprocessing.yaml  preprocessing_cfg1.yaml  preprocessing_icai.yaml
configs/local/: preprocessing_local.yaml
configs/picasso/: preprocessing.yaml  preprocessing_v2.yaml  segmentation.yaml
configs/templates/: graphical_abstract.yaml  manual_curation.yaml  manual_curation_postprocessing.yaml  preprocessing.yaml  raw_data.yaml
docs/: dataset_curation_technical_reference.md  fov-reconstruction-literature.md  step0_data_harmonization.md
docs/dataset_curation/: 01-reorganization.md  02-completeness-filtering.md  03-quality-filtering.md  04-re-identification.md  05-quality-analysis.md  06-visualization.md  quality_filtering_formalization.md
docs/preprocessing/: 00-pipeline-overview.md  01-data-harmonization.md  02-bias-field-correction.md  03-resampling.md  04-cubic-padding.md  05-registration.md  06-skull-stripping.md  07-intensity-normalization.md  08-longitudinal-registration.md  registration-debugging-log.md
mengrowth/analysis/: __init__.py
mengrowth/analysis/graphical_abstract_figures/: __init__.py  config.py  generator.py  loader.py  renderers_2d.py  renderers_3d.py
mengrowth/analysis/src/: __init__.py  discovery.py  export.py  figures.py  octant_grids.py  types.py
mengrowth/cli/: __init__.py  analyze_dataset.py  curate_dataset.py  filter_raw_data.py  graphical_abstract.py  preprocess.py  reorganize_raw_data.py  segment.py  visualize_analysis.py
mengrowth/preprocessing/: config.py
mengrowth/preprocessing/quality_analysis/: __init__.py  analyzer.py  attrition.py  html_report.py  mask_comparison.py  metrics.py  qc_manager.py  qc_metrics.py  snr_cnr_metrics.py  visualize.py
mengrowth/preprocessing/src/: README.md  archiver.py  base.py  checkpoint.py  config.py  preprocess.py
mengrowth/preprocessing/src/bias_field_correction/: __init__.py  base.py  n4_sitk.py
mengrowth/preprocessing/src/data_harmonization/: background.py  io.py  orient.py
mengrowth/preprocessing/src/data_harmonization/head_masking/: __init__.py  conservative.py  otsu_foreground.py  self.py
mengrowth/preprocessing/src/normalization/: __init__.py  base.py  fcm.py  kde.py  lsq.py  percentile_minmax.py  utils.py  whitestripe.py  zscore.py
mengrowth/preprocessing/src/registration/: __init__.py  antspyx_intra_study_to_atlas.py  antspyx_multi_modal_coregistration.py  base.py  constants.py  diagnostic_parser.py  factory.py  intra_study_to_atlas.py  longitudinal_registration.py  multi_modal_coregistration.py  reference_selection.py  stdout_capture.py
mengrowth/preprocessing/src/resampling/: __init__.py  base.py  bspline.py  composite.py  eclare.py
mengrowth/preprocessing/src/skull_stripping/: __init__.py  base.py  hdbet.py  synthstrip.py
mengrowth/preprocessing/src/step0_data_harmonization/: base.py  io.py  orient.py
mengrowth/preprocessing/src/step0_data_harmonization/head_masking/: conservative.py  self.py
mengrowth/preprocessing/src/step1_bias_field_correction/: __init__.py  base.py  n4_sitk.py
mengrowth/preprocessing/src/step2_resampling/: __init__.py  base.py  bspline.py  eclare.py
mengrowth/preprocessing/src/steps/: __init__.py  bias_field_correction.py  cubic_padding.py  data_harmonization.py  intensity_normalization.py  longitudinal_registration.py  registration.py  resampling.py  skull_stripping.py  step_registry.py  utils.py
mengrowth/preprocessing/src/utils/: head_mask.py  n4_bias_fields.py  nrrd_to_nifti.py  pipeline_logger.py
mengrowth/preprocessing/utils/: filter_raw_data.py  manual_curation.py  metadata.py  quality_filtering.py  reorganize_raw_data.py
mengrowth/segmentation/: __init__.py  config.py  postprocess.py  prepare.py
scripts/: analyze_dataset.py  check_shapes.py  generate_thesis_data.py  plot_quality_filtering_examples.py  visualize_curated_dataset.py  visualize_meningioma_octant.py  visualize_one_octant.py
slurm/: preprocess.sh  preprocess_worker.sh
slurm/preprocessing/: preprocess.sh  preprocess_worker.sh
slurm/segmentation/: meningioma_seg.sh  meningioma_seg_worker.sh
tests/: __init__.py  test_manual_curation.py  test_normalization.py  test_qc_manager.py  test_qc_metrics.py  test_reference_selection.py  test_segmentation.py
