[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mengrowth"
version = "0.1.0"
description = "MenGrowth: A deep learning framework for meningioma growth prediction from multimodal magnetic resonance imaging"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "magnetic-resonance-imaging",
    "deep-learning",
    "tumour-growth-prediction",
    "meningioma"
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/MarioPasc/MenGrowth"
Documentation = "https://github.com/MarioPasc/MenGrowth#readme"
Repository = "https://github.com/MarioPasc/MenGrowth"
"Bug Tracker" = "https://github.com/MarioPasc/MenGrowth/issues"
Changelog = "https://github.com/MarioPasc/MenGrowth/releases"

[project.scripts]

[tool.setuptools]
packages = [
    "mengrowth"
]

[tool.setuptools.package-data]
medsyn = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "yaml",
    "pandas",
]
ignore_missing_imports = true